--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,52 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.header-container {
+  text-align: center;
+}
+
+.logo {
+  font-size: 35px;
+}
+
+/*Card start*/
+.card {
+  display: inline-block;
+  width: 25%;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: 0;
+  outline: 0;
+  padding: 12px;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  color: white;
+}
+
+.card button:hover {
+  opacity: 0.7;
+}
+
+img {
+  width: 100%;
+}
+
+/*Card End*/
+/*# sourceMappingURL=main.css.map */
