--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,12 @@
 *::before {
   box-sizing: border-box;
   font-family: "Montserrat";
-  background-color: #dddfd4;
+  /*margin: 0;*/
+  /*background-color: #dddfd4;*/
+}
+
+body {
+  margin: 0;
 }
 
 #header,
@@ -48,8 +53,15 @@ ul {
   }
 }
 
+h2 {
+  text-align: center;
+  padding-top: 80px;
+}
+
 .container {
   display: flex;
+  justify-content: center;
+  padding-top: 80px;
   max-width: 960px;
   margin: 0 auto;
 }
@@ -59,14 +71,15 @@ ul {
 }
 
 .header-right {
-  padding: 20px;
   width: 40%;
 }
 
-/*This start Cart*/
-#product {
-  padding-top: 20px;
+.video,
+#video-container {
+  text-align: center;
 }
+
+/*This start Cart*/
 
 .product {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -94,6 +107,7 @@ ul {
   cursor: pointer;
   width: 100%;
   font-size: 18px;
+  border-radius: 10px;
 }
 
 .product button:hover {
@@ -101,4 +115,94 @@ ul {
   color: black;
 }
 
+#product h2 {
+  padding-top: 10px;
+}
+
+#product p {
+  padding-bottom: 10px;
+}
+
 /*End Cart*/
+
+/*footer start*/
+footer {
+  background-color: #dddfd4;
+  margin-top: 20px;
+  padding: 10px;
+  text-align: center;
+}
+
+/*Form Section*/
+
+#form input {
+  border-radius: 5px;
+  border: 0;
+  color: black;
+  display: inline-block;
+  padding: 10px 25px;
+  margin: 20px;
+  text-align: center;
+}
+/*End Form Section*/
+
+/*footer end*/
+@media (max-width: 530px) {
+  #product,
+  .container {
+    display: grid;
+    grid-template-columns: auto;
+    /*grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));*/
+    .product {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      min-width: 300px;
+      margin: 20px 1.66%;
+      padding: 10px;
+      width: 30%;
+      border-radius: 10px;
+      text-align: center;
+      font-family: "Montserrat";
+    }
+
+    .price {
+      color: grey;
+      font-size: 22px;
+    }
+
+    .product button {
+      border: none;
+      outline: 0;
+      padding: 12px;
+      color: #fff;
+      background-color: #173e43;
+      text-align: center;
+      cursor: pointer;
+      width: 100%;
+      font-size: 18px;
+      border-radius: 10px;
+    }
+
+    .product button:hover {
+      opacity: 0.7;
+      color: black;
+    }
+
+    #product h2 {
+      padding-top: 10px;
+    }
+
+    #product p {
+      padding-bottom: 10px;
+    }
+  }
+}
+#main .header-left {
+  display: grid;
+  grid-template-columns: auto;
+  text-align: center;
+  align-items: center;
+}
+
+#video {
+  width: 420px;
+}
