--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 *,
 *::after,
@@ -11,11 +11,19 @@
 
 body {
   margin: 0;
+  background-color: #e6e9f0;
+}
+
+#header {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 #header,
 nav {
-  background-color: #dddfd4;
+  background-color: #c2dde6;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +32,10 @@ nav {
 #header .nav-link {
   text-decoration: none;
   color: black;
+}
+
+#header .nav-link:hover {
+  background-color: #e6e9f0;
 }
 
 ul {
@@ -40,15 +52,23 @@ ul {
   padding: 10px;
 }
 
+.header-left h1 {
+  font-size: 38px;
+}
+
+#email-form h2 {
+  font-size: 38px;
+}
+
 .btn {
-  background-color: #173e43;
+  background-color: #431c5d;
   color: white;
   padding: 12px 15px;
   border-radius: 12px;
   text-decoration: none;
 
   &.btn:hover {
-    background-color: #3fb0ac;
+    background-color: #cdd422;
     color: black;
   }
 }
@@ -56,6 +76,12 @@ ul {
 h2 {
   text-align: center;
   padding-top: 80px;
+}
+
+#product,
+.product-text {
+  padding-top: 2em;
+  margin-bottom: 0;
 }
 
 .container {
@@ -68,10 +94,12 @@ h2 {
 
 .header-left {
   width: 60%;
+  padding-right: 25px;
 }
 
 .header-right {
   width: 40%;
+  padding-top: 30px;
 }
 
 .video,
@@ -102,7 +130,7 @@ h2 {
   outline: 0;
   padding: 12px;
   color: #fff;
-  background-color: #173e43;
+  background-color: #431c5d;
   text-align: center;
   cursor: pointer;
   width: 100%;
@@ -112,7 +140,7 @@ h2 {
 
 .product button:hover {
   opacity: 0.7;
-  color: black;
+  color: #cdd422;
 }
 
 #product h2 {
@@ -127,9 +155,10 @@ h2 {
 
 /*footer start*/
 footer {
-  background-color: #dddfd4;
+  background-color: #c2dde6;
   margin-top: 20px;
-  padding: 10px;
+  padding-top: 0;
+  padding-bottom: 10px;
   text-align: center;
 }
 
@@ -147,12 +176,13 @@ footer {
 /*End Form Section*/
 
 /*footer end*/
+
 @media (max-width: 530px) {
   #product,
   .container {
     display: grid;
     grid-template-columns: auto;
-    /*grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));*/
+
     .product {
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       min-width: 300px;
@@ -194,15 +224,27 @@ footer {
     #product p {
       padding-bottom: 10px;
     }
-  }
-}
-#main .header-left {
-  display: grid;
-  grid-template-columns: auto;
-  text-align: center;
-  align-items: center;
-}
 
-#video {
-  width: 420px;
+    .header-left {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+      text-align: center;
+      padding-left: 0.2em;
+    }
+
+    .header-right {
+      padding-left: 40px;
+      padding-top: 20px;
+    }
+
+    .header-right {
+      display: grid;
+    }
+
+    .video,
+    #video {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
